--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 ,"homepage": "http://github.com/aredridel/node-xmpp-muc"
 ,"bugs": "http://github.com/aredridel/node-xmpp-muc/issues"
 ,"maintainers": [{"name": "Aria Stewart"
-		 ,"email": "aria.stewart@nbtsc.org",
+		 ,"email": "aria.stewart@nbtsc.org"
 		 ,"web": "http://dinhe.net/~aredridel/"
 		 }]
 ,"licenses": [{"type": "MIT"}]
